--- a/public/about.html
+++ b/public/about.html
@@ -17,12 +17,14 @@
   </head>
   <body>
     <div class="container-fluid">
-
       <div class="row m-3 headerrow">
         <div class="col text-center">
           <h3>About</h3>
         </div>
       </div>
+</div>
+
+      
 
       <div class="row m-3">
         <div class="col text-center">
