--- a/public/lobby.html
+++ b/public/lobby.html
@@ -11,6 +11,15 @@
       .headerrow {
         background-color: darkseagreen;
       }
+      .join_room_response {
+        background-color: rbg(223,224, 223);
+        margin: 1px 1px 1px 10px;
+      }
+      .chat_message {
+        font-size:125%;
+        margin: 1px 1px 1px 1px;
+        color: rgb(53,3,168)
+      }
     </style>
 
     <title>Reversi:Lobby</title>
@@ -24,14 +33,24 @@
       </div>
       <div class="row">
         <div class="col">
+          <div class="row align-items-center justify-content-center m-3">
+            <div class="col-8">
+              <div class="input-group">
+                <input type="text" class="form-control text-nowrap" id="chatMessage" placeholder="Enter your message" aria-label="Enter your message to send to the chat room"/>
+                <button type="submit" class="btn btn-primary text-nowrap" id="chatButton"
+                  onclick="sendChatMessage()">Send</button>
+            </div>
+          </div>
+          </div>
           <h4>Messages</h4>
           <div id="messages">
            </div>
         </div>
-      </div>
+      
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
+    <script src="https://cdn.socket.io/4.5.0/socket.io.min.js" integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
