--- a/public/game.html
+++ b/public/game.html
@@ -33,7 +33,7 @@
             <img class="img-fluid" src="assets/images/white.gif" alt="White Score" />
             <span id="whitesum">White Sum</span>
             <span id="whitesum">vs</span>
-            <span id="whitesum">Black Sum</span>
+            <span id="blacksum">Black Sum</span>
           <img class="img-fluid" src="assets/images/black.gif" alt="Black Score" />
           
           </div>
