--- a/public/game.html
+++ b/public/game.html
@@ -46,8 +46,9 @@
           <div class="row align-items-start justify-content-center">
             <div class="col-md-8 table-responsive">
               <div class="progress">
-                <div id="elasped" class="progress-bar progress-bar-animated progress-bar-striped
-                bg-success" role="progressbar" style="width:0%;" aria-valuenow="0" aria-valuemin="0"
+                <div id="elasped" 
+                class="progress-bar progress-bar-animated progress-bar-striped bg-success" 
+                role="progressbar" style="width:0%;" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100"></div>
               </div>
               <table id="game_board" class="mx-auto w-auto">
