--- a/public/game.html
+++ b/public/game.html
@@ -20,6 +20,15 @@
           <h3 id="gameTitle">Reversi</h3>
         </div>
       </div>
+      <div class="row m-3">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item"><a href="lobby.html">Lobby</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Game Room</li>
+          </ol>
+        </nav>
+      </div>
 
         <div class="row m-3">
           <div class="col text-center">
@@ -47,7 +56,7 @@
             <div class="col-md-8 table-responsive">
               <div class="progress">
                 <div id="elasped" 
-                class="progress-bar progress-bar-animated progress-bar-striped bg-success" 
+                class="progress-bar progress-bar-animated progress-bar-striped bg-info" 
                 role="progressbar" style="width:0%;" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100"></div>
               </div>
@@ -141,7 +150,7 @@
               </div>
               <div class="input-group">
                 <input type="text" class="form-control text-nowrap" id="chatMessage" placeholder="Enter your message" aria-label="Enter your message to send to the chat room"/>
-                <button type="submit" class="btn btn-primary text-nowrap" id="chatButton"
+                <button type="submit" class="btn btn-info text-nowrap" id="chatButton"
                   onclick="sendChatMessage()">Send</button>
             </div>
             <div id="messages">
